use autoboxing instead of manual Boolean creation